# thunderboltz

./: .gitignore  AGENTS.md  README.md  drizzle.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
.claude/commands/: thundersync.md
.github/workflows/: ci.yml  release.yml  tauri-v2-release.yml
backend/: Makefile
backend/tests/: test_locations.py  test_main.py
docs/: architecture.md  development.md  faq.md  local-models.md  roadmap.md
src/: App.tsx  Home.tsx  app.tsx  dal.ts  layout.tsx  types.ts  ui-kit.tsx  welcome.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assist_embeddings/: Cargo.toml
src-tauri/assist_embeddings/src/: embedding.rs
src-tauri/assist_imap_client/: Cargo.toml
src-tauri/assist_imap_client/src/: lib.rs
src-tauri/assist_imap_sync/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db_pool.rs  imap_client.rs  lib.rs  libsql.rs  local_server.rs  main.rs  state.rs
src-tauri/thunderbolt_bridge/: Cargo.toml
src-tauri/thunderbolt_bridge/src/: mcp.rs  websocket.rs
src-tauri/thunderbolt_embeddings/: Cargo.toml
src-tauri/thunderbolt_imap_client/: Cargo.toml
src-tauri/thunderbolt_imap_sync/: Cargo.toml
src/ai/: fetch.test.ts  fetch.ts  huggingface-local-models.ts  huggingface-local-provider.ts  llm-inference-worker-client.ts  llm-inference.worker.ts
src/automations/: automation-form-modal.tsx  runner.ts
src/chats/: chat-state.tsx  chat.tsx  detail.tsx  layout.tsx
src/components/: mcp-status.tsx
src/components/chat/: ChatUI.tsx  chat-loading-indicator.tsx  chat-ui.tsx
src/components/ui/: card.tsx  input.tsx  mail-card-example.tsx  mail-card.tsx  prompt-input.tsx  select.tsx
src/db/: database.ts  index.ts  relations.ts  schema.ts  tables.ts
src/defaults/: models.ts
src/devtools/: generate-embeddings-frontend.tsx  generate-embeddings-no-database.tsx  generate-embeddings-optimized.tsx  generate-embeddings.tsx  generate-threads.tsx  imap-sync-section.tsx  reset-email-messages.tsx  search.tsx
src/drizzle/: 0000_long_triton.sql  0000_messy_the_hunter.sql  0001_lonely_fallen_one.sql  0002_zippy_squadron_sinister.sql  0005_reflective_doctor_octopus.sql  _migrations.ts
src/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0005_snapshot.json  _journal.json
src/hooks/: use-mcp-sync.tsx  use-setting.ts
src/imap/: imap.ts  sync.ts
src/layout/sidebar/: index.tsx
src/lib/: ai-tools.ts  ai.ts  as-text.ts  dal.ts  email.ts  embeddings.ts  fs.ts  indexer.ts  local-providers.test.ts  local-providers.ts  local-server.ts  title-generator.ts  tool-metadata.ts  tray.ts  utils.ts
src/settings/: accounts.tsx  index.tsx  layout.tsx  mcp-servers.tsx  models.tsx  preferences.tsx
src/settings/models/: detail.tsx  index.tsx  layout.tsx  local-servers.tsx  model-combobox.tsx  new.tsx
