cargo-features = ["profile-rustflags"]

[package]
name = "mozilla-assist"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "mozilla-assist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mozilla_assist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mozilla-assist"
path = "src/main.rs"

[[bin]]
name = "imap"
path = "examples/imap.rs"

[[bin]]
name = "imap-idle"
path = "examples/imap-idle.rs"

[[bin]]
name = "embed"
path = "examples/embed.rs"

[[bin]]
name = "mistral"
path = "examples/mistral.rs"

[[bin]]
name = "embed-many"
path = "examples/embed-many.rs"

[[bin]]
name = "summarize-many"
path = "examples/summarize-many.rs"

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

# Common dependencies (no Metal features)
[dependencies]
tauri = { version = "2", features = ["isolation", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imap = "3.0.0-alpha.15"
native-tls = "0.2.14"
dotenv = "0.15.0"
hf-hub = "0.4.1"
tokenizers = "0.21.0"
anyhow = "1.0.96"
tokio = "1.43.0"
chrono = { version = "0.4.39", features = ["serde"] }
html2text = "0.14.0"
# Base versions without Metal for all platforms
candle-nn = { version = "0.8.3", features = ["metal"] }
candle-core = { version = "0.8.3", features = ["metal"] }
candle-transformers = { version = "0.8.3", features = ["metal"] }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev = "e2f9648cbb6e4b8a6ac1d9e44df5900210fa5862", features = [
    "metal"
] }
tauri-plugin-devtools = "2.0.0"
tauri-plugin-http = "2"
tokio-stream = "0.1.17"
http = "1.2.0"
tauri-plugin-process = "2"
regex = "1.11.1"
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service"
] }
tauri-plugin-fs = "2"
libsql = { version = "0.6.0", features = ["encryption"] }
base64 = "0.22.1"
indexmap = "2.7.1"
bytes = "1.10.1"
mail-parser = { version = "0.10.2", features = ["serde_support"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.
rustflags = ["-C", "target-feature=+fp16,+fhm"]

[profile.dev.package]
"candle-nn" = { opt-level = 3, debug = false }
"candle-core" = { opt-level = 3, debug = false }
"candle-transformers" = { opt-level = 3, debug = false }
"mistralrs" = { opt-level = 3, debug = false }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
