[package]
name = "assist_embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
libsql = { git = "https://github.com/libsql/libsql.git", rev = "d980ce13b9c4b3f05b03dd1b9ca2fb2765c0cb68", features = [
    "encryption"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
# Dependencies for embedding functionality
candle-nn = { version = "0.8.3", features = ["metal"] }
candle-core = { version = "0.8.3", features = ["metal"] }
candle-transformers = { version = "0.8.3", features = ["metal"] }
hf-hub = "0.4.2"
tokenizers = "0.21.1"
uuid = { version = "1.16.0", features = ["v7", "rng"] }
rayon = "1.8.0"
objc = "0.2.7"

[[example]]
name = "generate_embeddings"
path = "examples/generate_embeddings.rs"

[[example]]
name = "test_embeddings"
path = "examples/test_embeddings.rs"

[[example]]
name = "test_quantized_embeddings"
path = "examples/test_quantized_embeddings.rs"
