[package]
name = "assist_imap_client"
version = "0.1.0"
edition = "2021"
description = "IMAP client for Mozilla Assist"
authors = ["Mozilla Assist Team"]

[dependencies]
imap = "3.0.0-alpha.15"
native-tls = "0.2.14"
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
mail-parser = { version = "0.10.2", features = ["serde_support"] }
regex = "1.11.1"
dotenv = "0.15.0"
tokio = { version = "1.44.1", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full", "macros"] }
